Switching code to use my iterator library