@@ -1,26 +1,24 @@
 package jenjinn.engine.bitboards;
 
-import static io.xyz.chains.utilities.CollectionUtil.asList;
-import static io.xyz.chains.utilities.CollectionUtil.tail;
-import static io.xyz.chains.utilities.CollectionUtil.take;
-import static io.xyz.chains.utilities.MapUtil.longMap;
-import static io.xyz.chains.utilities.RangeUtil.range;
-import static java.util.stream.Collectors.toList;
+import static xawd.jflow.utilities.CollectionUtil.tail;
+import static xawd.jflow.utilities.MapUtil.longMap;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.LongStream;
 
 import jenjinn.engine.enums.BoardSquare;
 import jenjinn.engine.enums.Direction;
 import jenjinn.engine.misc.PieceMovementDirections;
+import xawd.jflow.construction.Iter;
+import xawd.jflow.construction.IterRange;
 
 /**
  * Second of three utility classes containing only static methods to initialise
  * the constants in the BBDB class. This class initialises everything we need to
  * generate the magic move databases for sliding pieces (and for the pawn first
  * moves).
- * 
+ *
  * @author TB
  * @date 23 Jan 2017
  */
@@ -28,17 +26,17 @@ public class BitboardsInitialisationSection2
 {
 	public static long[][] generateAllBishopOccupancyVariations()
 	{
-		return BoardSquare.stream()
+		return BoardSquare.iterate()
 				.map(square -> calculateOccupancyVariations(square, PieceMovementDirections.BISHOP))
-				.collect(toList())
+				.toList()
 				.toArray(new long[64][]);
 	}
 
 	public static long[][] generateAllRookOccupancyVariations()
 	{
-		return BoardSquare.stream()
+		return BoardSquare.iterate()
 				.map(square -> calculateOccupancyVariations(square, PieceMovementDirections.ROOK))
-				.collect(toList())
+				.toList()
 				.toArray(new long[64][]);
 	}
 
@@ -47,7 +45,7 @@ public class BitboardsInitialisationSection2
 		final List<BoardSquare> relevantSquares = new ArrayList<>();
 		for (final Direction dir : movementDirections) {
 			final int numOfSqsLeft = startSq.getNumberOfSquaresLeftInDirection(dir);
-			relevantSquares.addAll(startSq.getAllSquaresInDirections(asList(dir), numOfSqsLeft - 1));
+			relevantSquares.addAll(startSq.getAllSquaresInDirections(Arrays.asList(dir), numOfSqsLeft - 1));
 		}
 		return findAllPossibleOrCombos(longMap(BoardSquare::asBitboard, relevantSquares));
 	}
@@ -65,7 +63,7 @@ public class BitboardsInitialisationSection2
 		}
 		else {
 			final long[] ans = new long[(int) Math.pow(2.0, length)];
-			final long[] recursiveAns = findAllPossibleOrCombos(take(length - 1, array));
+			final long[] recursiveAns = findAllPossibleOrCombos(Iter.of(array).take(length - 1).toArray());
 			int ansIndexCounter = 0;
 			int recursiveAnsIndexCounter = 0;
 			for (int j = 0; j < recursiveAns.length; j++) {
@@ -81,21 +79,21 @@ public class BitboardsInitialisationSection2
 
 	public static long[] generateRookOccupancyMasks()
 	{
-		return range(64).stream().mapToLong(i -> tail(Bitboards.ROOK_OCCUPANCY_VARIATIONS[i])).toArray();
+		return IterRange.to(64).mapToLong(i -> tail(Bitboards.ROOK_OCCUPANCY_VARIATIONS[i])).toArray();
 	}
 
 	public static long[] generateBishopOccupancyMasks()
 	{
-		return range(64).stream().mapToLong(i -> tail(Bitboards.BISHOP_OCCUPANCY_VARIATIONS[i])).toArray();
+		return IterRange.to(64).mapToLong(i -> tail(Bitboards.BISHOP_OCCUPANCY_VARIATIONS[i])).toArray();
 	}
 
 	public static int[] generateRookMagicBitshifts()
 	{
-		return LongStream.of(Bitboards.ROOK_OCCUPANCY_MASKS).mapToInt(x -> 64 - Long.bitCount(x)).toArray();
+		return Iter.of(Bitboards.ROOK_OCCUPANCY_MASKS).mapToInt(x -> 64 - Long.bitCount(x)).toArray();
 	}
 
 	public static int[] generateBishopMagicBitshifts()
 	{
-		return LongStream.of(Bitboards.BISHOP_OCCUPANCY_MASKS).mapToInt(x -> 64 - Long.bitCount(x)).toArray();
+		return Iter.of(Bitboards.BISHOP_OCCUPANCY_MASKS).mapToInt(x -> 64 - Long.bitCount(x)).toArray();
 	}
 }
